[gd_scene load_steps=4 format=3 uid="uid://cqp8h4k8xmq1r"]

[ext_resource type="Texture2D" path="res://UI/health_bar/health_bar_decoration.png" id="1_decoration"]
[ext_resource type="Texture2D" path="res://UI/health_bar/health_bar.png" id="2_shield_bar"]
[ext_resource type="Script" path="res://UI/health_bar/ShieldBar.gd" id="3_shield_script"]

[node name="ShieldBar" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3_shield_script")

[node name="ShieldBarDecoration" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 75.0
offset_right = 220.0
offset_bottom = 120.0
texture = ExtResource("1_decoration")
modulate = Color(0.7, 0.7, 1.0, 1.0)

[node name="ShieldBarFill" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 34.0
offset_top = 85.0
offset_right = 206.0
offset_bottom = 110.0
texture = ExtResource("2_shield_bar")
modulate = Color(0.3, 0.8, 1.0, 1.0)
expand_mode = 1 